[gd_scene load_steps=3 format=3 uid="uid://dxvw0y9qkqxn"]

[ext_resource type="Script" path="res://systems/VFXTest.gd" id="1_0k8vz"]
[ext_resource type="PackedScene" uid="uid://b8yxvw2qkqh8yi" path="res://actors/Player.tscn" id="2_0k8w0"]

[node name="VFXTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0k8vz")

[node name="Player" parent="." instance=ExtResource("2_0k8w0")]
position = Vector2(500, 300)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(500, 400)

[node name="GroundSprite" type="ColorRect" parent="Ground"]
offset_left = -300.0
offset_top = -20.0
offset_right = 300.0
offset_bottom = 20.0
color = Color(0.4, 0.3, 0.2, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(600, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -20.0

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "VFX Test Scene"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ExplosionButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Test Explosion"

[node name="ShakeButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Test Screen Shake"

[node name="HitstopButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Test Hit-Stop"